--- a/style.css
+++ b/style.css
@@ -5,10 +5,10 @@ box-sizing: border-box;}
 
 span
 {
-background-color: #ffffff;
+background-color: #000000;
 }
 
-td{ text-shadow: 0px 0px 0px #000000;}
+<!-- td{ text-shadow: 0px 0px 0px #000000;} -->
 
 img {
 max-width: 100%;
@@ -32,10 +32,10 @@ display: block;
 }
 
 .search {
-  background-color: #000000; 
+<!--  background-color: #000000; -->
   text-shadow: 1px 0.5px #ffffff;
   width: 300px;
-  border: 3px solid #FF0000;
+  border: 3px solid #000000;
   padding: 10px;
   margin: 10px;
 }
@@ -43,7 +43,7 @@ display: block;
 
 h1{
 color: white;
-text-shadow: 2px 2px #FF0000;
+<!-- text-shadow: 2px 2px #FF0000;-->
 }
 
 div.a {
@@ -54,8 +54,8 @@ text-align: center;
 .footer {
 position: 0;
 clear:both;
-  background-color: #000001;
-  color: #ff0000;
+<!--  background-color: #000001; -->
+<!--  color: #ff0000; -->
   text-align: center;
   font-size: 12px;
   padding: 15px;
@@ -83,9 +83,9 @@ diplay: table;
   font-weight: bold;
   
   background-color: black;
-  color: #FF0000;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  text-shadow: 4px 4px 4px #000000;
+ <!-- color: #FF0000; -->
+<!--  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); -->
+<!--  text-shadow: 4px 4px 4px #000000; -->
 }
 
 .menu li:hover {
@@ -94,10 +94,8 @@ diplay: table;
 .button{
 background-color: transparent;
 border: none;
-
-text-shadow: 4px 4px 4px #000000;
-box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-color: red;
+<!-- box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); -->
+<!-- color: red; -->
 }
 #tes {
 background-color: black;
@@ -119,7 +117,7 @@ width:100%;
 }
 @media only screen and (min-width: 600px) {
 .col-s-1 {width: 8.33%;}
-.col-s-2 {width: 16.66%;}
+.col-s-2 {width: 16.67%;}
 .col-s-3 {width: 25%;}
 .col-s-4 {width: 33.33%;}
 .col-s-5 {width: 41.66%;}
@@ -134,7 +132,7 @@ width:100%;
 
 @media only screen and (min-width: 768px) {
 .col-1 {width: 8.33%;}
-.col-2 {width: 16.66%;}
+.col-2 {width: 16.67%;}
 .col-3 {width: 25%;}
 .col-4 {width: 33.33%;}
 .col-5 {width: 41.66%;}
@@ -149,8 +147,8 @@ width:100%;
 
 
 body {
-color: #FF0000;
-background-image: url("https://i.pinimg.com/originals/ea/2c/17/ea2c17d6df033ef20dc1a2ff7307baa2.jpg");
+color: #FFFFFF;
+background-image: url("https://images.unsplash.com/photo-1610648888194-e410f3d6828b?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80");
 
 background-size: cover;
 background-repeat: no-repeat;
@@ -160,10 +158,10 @@ background-repeat: no-repeat;
   font-weight: bold;
   float: center;
   font-size: 17px;
-  color: #FF0000;
+  color: #FFFFFF;
   text-align: center;
   padding: 11px;
-  text-shadow: 2px 2px 4px #ffffff;
+<!--  text-shadow: 2px 2px 4px #ffffff;-->
   text-decoration: none;
 }
 .navbar a:hover {
@@ -176,9 +174,9 @@ background-repeat: no-repeat;
 .dropbtn {
   font-weight: bold;
   background-color: #000000; /*EFDA7D;*/
-  color: #FF0000;
+  color: #FFFFFF;
   padding: 12px;
-  text-shadow: 2px 2px 4px #ffffff;
+<!--  text-shadow: 2px 2px 4px #ffffff; -->
   font-size: 16px;
   border: none;
 }
@@ -201,7 +199,7 @@ background-repeat: no-repeat;
 
 /* Links inside the dropdown */
 .dropdown-content a {
-  color: red;
+<!--  color: red; -->
   padding: 12px 40px;
   text-decoration: none;
   display: block;
@@ -257,12 +255,7 @@ position: absolute;
 bottom:8px;
 left: 16px;
 }
-#Login_uname {
- text-align: center;
-}
-#Login_psw{
-text-align: right;
-}
+
 .close {
   position: absolute;
   right: 25px;
@@ -276,61 +269,3 @@ text-align: right;
   margin: 24px 0 12px 0;
   position: relative;
 }
-.flip-box
-{
-background-color: transparent;
-width: 300px;
-height: 200px;
-border: 4px solid #f1f1f1;
-perspective: 1000px;
-
-
-}
-
-.flip-box-inner
-{
-position: relative;
-width:100%;
-height:100%;
-text-align: left;
-weight: bold;
-transition: transform 0.8s;
-transform-style: preserve-3d;
-}
-
-.flip-box:hover .flip-box-inner 
-{
-transform: rotateY(180deg);
-}
-
-.flip-box-front, .flip-box-back
-{
-position: absolute;
-width: 100%;
-height: 100%;
-backface-visibility: hidden;
-
-}
-
-.flip-box-front
-{
-background-color: #bbb;
-color: black;
-}
-
-.flip-box-back
-{
-background-color: #000000;
-color: white;
-transform: rotateY(180deg);
-}
-
-#clock {
-background-color: black;
-font-weight: bold;
-text-align: center;
-font-size: 60px;
-}
-
-
-
