--- a/style.css
+++ b/style.css
@@ -3,11 +3,6 @@
 box-sizing: border-box;}
 
 
-span
-{
-background-color: #000000;
-}
-
 <!-- td{ text-shadow: 0px 0px 0px #000000;} -->
 
 img {
@@ -81,7 +76,6 @@ diplay: table;
 .menu li {
   paddng: 8px 10px;
   font-weight: bold;
-  
   background-color: black;
  <!-- color: #FF0000; -->
 <!--  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); -->
@@ -104,10 +98,11 @@ background-color: black;
 
 [class*="col-"] {
 float: left;
-padding:15px;
+padding:1px;
 }
 .navbar{
 background-color: #000000;
+text-align: centre;
 }
 
 
@@ -145,11 +140,11 @@ width:100%;
 .col-12 {width: 100%;}
 }
 
-
 body {
-color: #FFFFFF;
-background-image: url("https://images.unsplash.com/photo-1610648888194-e410f3d6828b?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80");
-
+color: white;
+background-image: url("https://images.unsplash.com/photo-1610663339673-5d63e1906ad2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=692&q=80");
+//mix-blend-mode: difference;
+text-shadow: 0px 1px 10px #000000;
 background-size: cover;
 background-repeat: no-repeat;
 
@@ -192,15 +187,15 @@ background-repeat: no-repeat;
   display: none;
   position: absolute;
   background-color: #000000; /*EFDA7D;*/
-  min-width: 115px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  min-width: 275px;
+  box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
 
 /* Links inside the dropdown */
 .dropdown-content a {
 <!--  color: red; -->
-  padding: 12px 40px;
+  padding: 12px 20px;
   text-decoration: none;
   display: block;
 }
