--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ box-sizing: border-box;}
 
 body {
   color: #66fcf1;
-  background-image: url("laptop shutting.jpg");
+  background-image: url("Background.jpg");
  //url("https://images.unsplash.com/photo-1555626040-e1c570e4a213?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=950&q=80");	//https://images.unsplash.com/photo-1610663339673-5d63e1906ad2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=692&q=80");
   //mix-blend-mode: difference;
   //text-shadow: 0px 1px 10px #000000;
