--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -10,7 +10,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Year 1
                             </div>
                         </div>
                     </div>
@@ -25,7 +25,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Year 2
                             </div>
                         </div>
                     </div>
@@ -55,7 +55,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Year 3
                             </div>
                         </div>
                     </div>
