--- a/_layouts/front2.html
+++ b/_layouts/front2.html
@@ -5,10 +5,11 @@
 
 <body id="page-top">
   {% include nav.html %}
-  {% include header.html %}
-  {% include services.html %}
   {% include contact.html %}
   {% include scripts.html %}
+
+{{ content }}
+
 </body>
 
 </html>
