--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>Your Favorite Source of Free Bootstrap Themes</h1>
+            <h1>A place for Selina's work</h1>
             <hr>
             <p>You will find all the work that I have completed over the years while studying Ethical Hacking at Abertay University, Dundee!</p>
             <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
