--- a/_layouts/front2.html
+++ b/_layouts/front2.html
@@ -5,10 +5,12 @@
 
 <body id="page-top">
   {% include nav.html %}
+  {% include header.html %}
 
 {{ content }}
 
   {% include contact.html %}
+  {% include footer.html %}
   {% include scripts.html %}
 
 
