--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,14 +8,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">Ethical Hacking</a>
+            <a class="navbar-brand page-scroll" href="/index.html">Ethical Hacking</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a class="page-scroll" href="#about">About</a>
+                    <a class="page-scroll" href="#about">About Me and What I do</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#services">Services</a>
