--- a/_includes/services.html
+++ b/_includes/services.html
@@ -11,29 +11,29 @@
         <div class="row">
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
-                    <h3>One</h3>
+                    <i class="fa fa-4x fa-code wow bounceIn text-primary"></i>
+                    <h3>Coding/Programming</h3>
                     <p class="text-muted"> </p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                    <h3>Two</h3>
+                    <i class="fa fa-4x fa-globe wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                    <h3>Website Development</h3>
                     <p class="text-muted"> </p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                    <h3>Three</h3>
+                    <i class="fa fa-4x fa-credit-card wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                    <h3>Penetration Testing</h3>
                     <p class="text-muted"> </p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                    <h3>Four</h3>
+                    <i class="fa fa-4x fa-bug wow bounceIn text-primary" data-wow-delay=".3s"></i>
+                    <h3>Mobile App Development</h3>
                     <p class="text-muted"> </p>
                 </div>
             </div>
