--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,13 +2,19 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
+                <h2 class="section-heading">My time prior to University</h2>
+                <hr class="light">
+                <p class="text-faded">I was an International Baccalaureate student at Anglo European School in Chelmsford. I was able to learn many things by taking on lots of higher and standard level calsses. Furthermore, through the required C.A.S (creative, action, service) electie I was able to help Key Stage 3 students learn programming in Python - which in turn helped me get e firmer grip on programming as I was teaching.
+		</p>
+		
+		<br/> <br/> <br/>
                 <h2 class="section-heading">My time at Abertay University</h2>
                 <hr class="light">
-                <p class="text-faded">While at University I was able to learn many things either related to my degree, about my peers, about myself, and about so much more.
-		While studying, I was able to learn how to program in C++, Python and Java, as well as dabbled in Perl. These were langues that were required by the modules that I took, but I also took the time to further my understanding of each and every one of them and continued to develop projects using them.
-		<br/> Furthermore, I took the opportunity to get to know my fellow peers through the Ethical Hacking Society as well as through becoming a Peer Mentor and working with students from various computing degrees as various stages.
+                <p class="text-faded">While at University I was able to learn many things either related to my degree, about my peers,and about so much more.
+		While studying, I was able to learn how to program in C++, Python and Java, as well as dabbled in Perl. These were languages that were required by the modules covered, but I also took the time to further my understanding of each one and continued to develop projects using them.
+		<br/> Furthermore, I took the opportunity to get to know my fellow peers through the Ethical Hacking Society as well as through becoming a Peer Mentor and working with students from various computing degrees at various stages. Also, continuing my growth through the Principal's Award where I was able to undertake workshops and getting to know fellow students more.
 		</p>
-                <a href="#portfolio" class="btn btn-default btn-xl">Have a look!</a>
+                <a class="page-scroll" href="#portfolio" class="btn btn-default btn-xl">Have a look!</a>
             </div>
         </div>
     </div>
