--- a/_includes/services.html
+++ b/_includes/services.html
@@ -13,28 +13,28 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-code wow bounceIn text-primary"></i>
                     <h3>Coding/Programming</h3>
-                    <p class="text-muted"> </p>
+                    <p class="text-muted"> C++, Python, and Java</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-globe wow bounceIn text-primary" data-wow-delay=".1s"></i>
                     <h3>Website Development</h3>
-                    <p class="text-muted"> </p>
+                    <p class="text-muted"> HTML5, CSS, JavaScript, JSON, jQuery, PHP, and MySQL</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-credit-card wow bounceIn text-primary" data-wow-delay=".2s"></i>
                     <h3>Penetration Testing</h3>
-                    <p class="text-muted"> </p>
+                    <p class="text-muted"> System testing, Web app testing, and Network testing</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-bug wow bounceIn text-primary" data-wow-delay=".3s"></i>
                     <h3>Mobile App Development</h3>
-                    <p class="text-muted"> </p>
+                    <p class="text-muted"> Java / Android Studio</p>
                 </div>
             </div>
         </div>
