--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">Images provided by:</h2>
+                <h4 class="section-heading">Images provided by:</h4>
                 <hr class="primary">
                 <p>Unsplash Free Images!</p>
             </div>
@@ -14,7 +14,7 @@
         </div>
         <div class="col-lg-2 col-lg-offset-1 text-center">
             
-            	<a href="">
+            	<a href="https://unsplash.com/photos/gnyA8vd3Otc">
                 <p>Shahadat Rahman</p>
             </a>
         </div>
@@ -28,13 +28,13 @@
         <div class="col-lg-2 col-lg-offset-1 text-center">
             
             	<a href="https://unsplash.com/photos/FO7JIlwjOtU?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink">
-                <p>Alexandre Debieve</p>
+                <p>	Alexandre Debieve</p>
             </a>
         </div>
         <div class="col-lg-2 col-lg-offset-1 text-center">
             
             <a href="https://unsplash.com/photos/SYTO3xs06fU">
-                <p>Marvin Meyer</p>
+                <p>	Marvin Meyer</p>
             </a>
         </div>
 
