--- a/css/main.scss
+++ b/css/main.scss
@@ -13,6 +13,7 @@
 
 // $text-color:       #111;
 // $background-color: #fdfdfd;
+$background-color: #eae0c8;
 // $brand-color:      #2a7ae2;
 
 // $grey-color:       #828282;
