--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
-                <a href="https://selina-fahy.github.io/Documents.html" class="portfolio-box">
+                <a href="https://selina-fahy.github.io/Documents.html#year1" class="portfolio-box">
                     <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
@@ -17,7 +17,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
+                <a href="https://selina-fahy.github.io/Documents.html#year2" class="portfolio-box">
                     <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
@@ -32,7 +32,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
+                <a href="https://selina-fahy.github.io/Documents.html#year3" class="portfolio-box">
                     <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
