--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,7 +4,7 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">My time prior to University</h2>
                 <hr class="light">
-                <p class="text-faded">I was an International Baccalaureate student at Anglo European School in Chelmsford. I was able to learn many things by taking on lots of higher and standard level calsses. Furthermore, through the required C.A.S (creative, action, service) electie I was able to help Key Stage 3 students learn programming in Python - which in turn helped me get e firmer grip on programming as I was teaching.
+                <p class="text-faded">I was an International Baccalaureate student at Anglo European School in Chelmsford. I was able to learn many things by taking on lots of higher and standard level calsses. Furthermore, through the required C.A.S (creative, action, service) electives I was able to help Key Stage 3 students learn programming in Python - which in turn helped me get e firmer grip on programming as I was teaching.
 		</p>
 		
 		<br/> <br/> <br/>
