--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -40,7 +40,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Year 3
                             </div>
                         </div>
                     </div>
