Adding Final year
Adding Final year at Abertay uni

--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -55,7 +55,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Year 3
+                                Noodles
                             </div>
                         </div>
                     </div>
@@ -70,7 +70,7 @@
                                 Category
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Year 4
                             </div>
                         </div>
                     </div>
