--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,4 +1,5 @@
 <section class="no-padding" id="portfolio">
+<center> <p> Click or tap a box to see the individual assessments that was completed during my time at Abertay. </p> </center> 
     <div class="container-fluid">
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
@@ -62,7 +63,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
+                <a href="https://selina-fahy.github.io/Year4documents.html#" class="portfolio-box">
                     <img src="img/portfolio/5.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
