--- a/_includes/headerForYear4.html
+++ b/_includes/headerForYear4.html
@@ -6,12 +6,10 @@
             <p>You will find all the work that I have completed over the years while studying Ethical Hacking (EH) at Abertay University, Dundee!</p>
             <a href="#MobileForensics" class="btn btn-primary btn-xl page-scroll">Mobile Forensics</a>
 	    <p></p>
-            <a href="#SytemInternalsandCybersecurity" class="btn btn-primary btn-xl page-scroll">Sytem Internals and Cybersecurity</a>
+            <a href="#SystemInternalsandCybersecurity" class="btn btn-primary btn-xl page-scroll">System Internals and Cybersecurity</a>
 	    <p></p>
-            <p>You will find all the work that I have completed over the years while studying Ethical Hacking (EH) at Abertay University, Dundee!</p>
             <a href="#ResilientSystems" class="btn btn-primary btn-xl page-scroll">Resilient Systems</a>
 	    <p></p>
-            <p>You will find all the work that I have completed over the years while studying Ethical Hacking (EH) at Abertay University, Dundee!</p>
             <a href="#Dissertation" class="btn btn-primary btn-xl page-scroll">Dissertation</a>
 	    <p></p>
         </div>
