Changes to Year 4

--- a/_includes/headerForYear4.html
+++ b/_includes/headerForYear4.html
@@ -4,13 +4,13 @@
             <h1>A place for Selina's work</h1>
             <hr>
             <p>You will find all the work that I have completed over the years while studying Ethical Hacking (EH) at Abertay University, Dundee!</p>
-            <a href="#MobileForensics" class="btn btn-primary btn-xl page-scroll">Mobile Forensics</a>
+            <!-- <a href="#MobileForensics" class="btn btn-primary btn-xl page-scroll">Mobile Forensics</a>
 	    <p></p>
             <a href="#SystemInternalsandCybersecurity" class="btn btn-primary btn-xl page-scroll">System Internals and Cybersecurity</a>
 	    <p></p>
-            <a href="#ResilientSystems" class="btn btn-primary btn-xl page-scroll">Resilient Systems</a>
+            <a href="#ResilientSystems" class="btn btn-primary btn-xl page-scroll">Resilient Systems</a> -->
 	    <p></p>
-            <a href="#Dissertation" class="btn btn-primary btn-xl page-scroll">Dissertation</a>
+            <a href="#Dissertation" class="btn btn-primary btn-xl page-scroll">Dissertation Proposal</a>
 	    <p></p>
         </div>
     </div>
