Making changes to Navigation Bar on Portfolios

--- a/_layouts/front2.html
+++ b/_layouts/front2.html
@@ -4,7 +4,7 @@
 {% include head.html %}
 
 <body id="page-top">
-  {% include nav.html %}
+  {% include navForPort.html %}
   {% include headerForYear2.html %}
 
 {{ content }}
